--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,7 @@
 name: CI
 
 on:
-  pull_request:
   push:
-    branches: [ main ]
-
 jobs:
   scan_ruby:
     runs-on: ubuntu-latest
@@ -40,6 +37,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -53,3 +51,19 @@ jobs:
       - name: Lint code for consistent style
         run: bin/rubocop -f github
 
+  deploy:
+    name: Déploiement sur Scalingo
+    runs-on: ubuntu-latest
+
+    needs: [test, lint]
+
+    if: ${{ (github.ref == 'refs/heads/staging') && !contains(github.event.head_commit.message, '[skip-deploy]') }}
+
+    steps:
+      - name: Install Scalingo CLI
+        run: curl -O https://cli-dl.scalingo.com/install && bash install
+
+      - run: scalingo login --api-token ${{ secrets.SCALINGO_TOKEN }}
+      - name: Déploiement sur staging
+        if: ${{ github.ref == 'refs/heads/staging' }}
+        run: scalingo --app acces-cible-staging integration-link-manual-deploy staging
