--- a/config/database.yml
+++ b/config/database.yml
@@ -82,8 +82,7 @@ production:
   primary: &primary_production
     <<: *default
     database: acces_cible_production
-    username: acces_cible
-    password: <%= ENV["ACCES_CIBLE_DATABASE_PASSWORD"] %>
+    url: <%= ENV["DATABASE_URL"] %>
   cache:
     <<: *primary_production
     database: acces_cible_production_cache
