--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -1,10 +1,12 @@
-# production:
-#   periodic_cleanup:
-#     class: CleanSoftDeletedRecordsJob
-#     queue: background
-#     args: [ 1000, { batch_size: 500 } ]
-#     schedule: every hour
-#   periodic_command:
-#     command: "SoftDeletedRecord.due.delete_all"
-#     priority: 2
-#     schedule: at 5am every day
+production:
+  schedule_checks:
+    class: ScheduleChecksJob
+    priority: 2
+    queue: background
+    schedule: every minute
+
+development:
+  schedule_audits:
+    class: ScheduleAuditsJob
+    queue: background
+    schedule: every minute
