--- a/config/database.yml
+++ b/config/database.yml
@@ -85,13 +85,13 @@ production:
     url: <%= ENV["DATABASE_URL"] %>
   cache:
     <<: *primary_production
-    database: acces_cible_production_cache
+    schema_search_path: acces_cible_production_cache
     migrations_paths: db/cache_migrate
   queue:
     <<: *primary_production
-    database: acces_cible_production_queue
+    schema_search_path: acces_cible_production_queue
     migrations_paths: db/queue_migrate
   cable:
     <<: *primary_production
-    database: acces_cible_production_cable
+    schema_search_path: acces_cible_production_cable
     migrations_paths: db/cable_migrate
