docker: fix the Docker setup
Bundler uses the `ruby-version` file to adjust now so copy that over
and follow the move to 3.4.2.

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,13 +1,15 @@
-FROM ruby:3.4.1-slim
+FROM ruby:3.4.2-slim
+
+ENV WITHIN_DOCKER=1
 
 EXPOSE 3000
 
-RUN apt-get update && apt-get upgrade -y && apt-get install --no-install-recommends -y build-essential libpq-dev
+RUN apt-get update && apt-get upgrade -y && apt-get install --no-install-recommends -y build-essential libpq-dev libyaml-dev chromium
 
 # do the bundle install in another directory with the strict essential
 # (Gemfile and Gemfile.lock) to allow further steps to be cached
 WORKDIR /bundle
-COPY Gemfile Gemfile.lock ./
+COPY Gemfile Gemfile.lock .ruby-version ./
 RUN bundle install
 
 # Move to the main folder
