Shorten component spec filenames

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -66,6 +66,9 @@ RSpec/ContextWording:
     - with
     - without
     - returns
+RSpec/SpecFilePathFormat:
+  Exclude:
+    - "spec/components/**/*.rb"
 
 Style/StringLiterals:
   EnforcedStyle: "double_quotes"
