--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,6 +103,9 @@ jobs:
       - name: Set up database schema
         run: bin/rails db:schema:load
 
+      - name: Precompile assets
+        run: bin/rails assets:precompile
+
       - name: Run tests
         run: bundle exec rspec
 
