Decrease solid queue recurring frequency to save resources

--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -3,4 +3,4 @@ production:
     class: ScheduleChecksJob
     priority: 2
     queue: background
-    schedule: every minute
+    schedule: every hour
