--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -4,3 +4,8 @@ production:
     priority: 2
     queue: background
     schedule: every hour
+  reschedule_checks:
+    class: RescheduleChecksJob
+    priority: 3
+    queue: background
+    schedule: every 10 minutes
