--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,7 +114,7 @@ jobs:
     name: Déploiement sur Scalingo
     runs-on: ubuntu-latest
 
-    needs: [test, lint]
+    needs: [test, lint, scan_ruby]
 
     if: ${{ (github.ref == 'refs/heads/staging') && !contains(github.event.head_commit.message, '[skip-deploy]') }}
 
