docker: upgrade and fix the Docker setup
* move to 3.4.4 ;
* create a worker for the CSS watching ;
* ensure we remove leftover PIDs ;
* ensure git is installed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  web:
+  web: &server
     build:
       dockerfile: Dockerfile.dev
     image: acces_cible
@@ -10,6 +10,10 @@ services:
     volumes:
       - "./:/app"
       - "/app/node_modules"
+  css-watcher:
+    <<: *server
+    command: ["bin/rails", "dartsass:watch"]
+    ports: []
   db:
     image: postgres
     environment:
