--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ spec/examples.txt
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+# Ignore test credentials key
+/config/credentials/test.key
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
