--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,10 @@
 # Mark the database schema as having been generated.
 db/schema.rb linguist-generated
 
+# Tell git that credentials are generated
+config/credentials.yml.enc linguist-generated=true
+config/credentials/*.yml.enc linguist-generated=true
+
 # Mark any vendored files as having been vendored.
 vendor/* linguist-vendored
 
