feat: Remove unused tags after 1 day

--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -4,3 +4,7 @@ production:
     priority: 2
     queue: background
     schedule: every 10 minutes
+  remove_orphan_tags:
+    class: RemoveOrphanTagsJob
+    queue: background
+    schedule: every night at 2am
