fix: Fix Orphan tag job scheduling

--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -7,4 +7,4 @@ production:
   remove_orphan_tags:
     class: RemoveOrphanTagsJob
     queue: background
-    schedule: every night at 2am
+    schedule: every day at 2am
