--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,7 @@ jobs:
 
     env:
       RAILS_ENV: test
-      RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+      RAILS_TEST_KEY: ${{ secrets.RAILS_TEST_KEY }}
       DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
       DISABLE_BOOTSNAP: "1"
 
