feat: Remove inactive users 1 year after their last login or logged in 18 months ago

--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -8,3 +8,7 @@ production:
     class: RemoveOrphanTagsJob
     queue: background
     schedule: every day at 2am
+  remove_inactive_users:
+    class: RemoveInactiveUsersJob
+    queue: background
+    schedule: "@monthly at 05:00"
