gem: enable using debug
ruby/debug is the new debugger on the block except it's maintained by
the core team and is just as powerful as pry or byebug. Since the
initial template is configured for `debug` reintroduce the gem and
make the necessary config tweaks to launch it (namely disabling
multi-threading which is error-prone in local dev).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
     image: acces_cible
     environment:
       DATABASE_URL: 'postgresql://postgres:dummy@db:5433'
+      RUBY_DEBUG_HOST: 0.0.0.0
+      RUBY_DEBUG_NO_RELINE: true
+      RUBY_DEBUG_PORT: 12345
+      WEB_CONCURRENCY: 0
     ports:
       - "3000:3000"
     volumes:
