docker: always run prepare
the Rails default entrypoint takes some ugly guess to figure out
whether you're launching the server but it's contrived and extremely
flaky: our Docker command has extra stuff (`-b 0.0.0.0`) so it fails
to guess correctly.

Instead, just run db:prepare and shortcut the entrypoint when we're
not the server.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     <<: *server
     command: ["bin/rails", "dartsass:watch"]
     ports: []
+    entrypoint: ''
   db:
     image: postgres
     environment:
