--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,6 +112,9 @@ jobs:
       - name: Run tests
         run: bundle exec rspec
 
+      - name: Run feature tests
+        run: bundle exec cucumber
+
   deploy:
     name: Déploiement sur Scalingo
     runs-on: ubuntu-latest
