--- a/config/database.yml
+++ b/config/database.yml
@@ -21,8 +21,14 @@ default: &default
 
 
 development:
-  <<: *default
-  database: acces_cible_development
+  primary: &primary_dev
+    <<: *default
+    url: <%= ENV.fetch("DATABASE_URL") %>
+    database: acces_cible_development
+  cable:
+    <<: *primary_dev
+    database: acces_cible_development_cable
+    migrations_paths: db/cable_migrate
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
