--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     volumes:
       - "./:/app"
       - "/app/node_modules"
+    depends_on:
+      - db
   css-watcher:
     <<: *server
     command: ["bin/rails", "dartsass:watch"]
