--- a/config/cable.yml
+++ b/config/cable.yml
@@ -2,21 +2,21 @@
 # and seeing results in the browser, you must do so from the web console (running inside the dev process),
 # not a terminal started via bin/rails console! Add "console" to any action or any ERB template view
 # to make the web console appear.
-development:
+
+default: &default
   adapter: solid_cable
   connects_to:
     database:
       writing: cable
   polling_interval: 0.1.seconds
+
+development:
+  <<: *default
   message_retention: 1.hour
 
 test:
   adapter: test
 
 production:
-  adapter: solid_cable
-  connects_to:
-    database:
-      writing: cable
-  polling_interval: 0.1.seconds
+  <<: *default
   message_retention: 1.day
