--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,9 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  # TL;DR Make it equal to the max number of available DB connections.
+  # It's a pool: Rails will grab and release connections as needed.
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 8 } %>
 
 
 development:
