feat: Configure SolidQueue to actually clear finished jobs
config.delete_finished_jobs_after defaults to 1.day but doesn't do anything on its own.
The installer started including this job after SolidQueue had been added to the application.

--- a/config/recurring.yml
+++ b/config/recurring.yml
@@ -1,4 +1,8 @@
 production:
+  clear_solid_queue_finished_jobs:
+    command: "SolidQueue::Job.clear_finished_in_batches(sleep_between_batches: 0.3)"
+    queue: background
+    schedule: every day at 7:00 and 21:00
   remove_orphan_tags:
     class: RemoveOrphanTagsJob
     queue: background
