compose: don't try and migrate the database with jobs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
   jobs:
     <<: *server
     command: "bin/jobs"
+    entrypoint: ''
     ports: []
     environment:
       DATABASE_URL: 'postgresql://postgres:dummy@db:5433'
